--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@cycle/dom": "22.0.0",
     "@cycle/run": "5.1.0",
+    "moment": "2.23.0",
     "pesel-check": "2.0.1",
     "ramda": "0.26.1",
     "tachyons": "4.11.1",
