--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sanus",
   "version": "1.0.0",
   "description": "Patients database for a clinic",
-  "main": "src/main.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron .",
     "start-lang=pl": "electron . lang=pl"
@@ -11,7 +11,10 @@
   "author": "Witold Szczerba",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "3.0.4"
+    "copy-webpack-plugin": "4.6.0",
+    "electron": "3.0.4",
+    "webpack": "4.28.3",
+    "webpack-cli": "3.1.2"
   },
   "dependencies": {
     "@cycle/dom": "22.0.0",
